data/derived/comb/progs/unify/prog3393.ml.out
Characters 69-122:
  then additivePersistence (sumList (digitsOfInt n)) (a + 1);;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         unit
